fight the cache

--- a/public/index.html
+++ b/public/index.html
@@ -24,16 +24,16 @@
       content="http://robocik.pwr.edu.pl/img/timeline/strategic_science_club.jpg"
     />
 
-    <link rel="icon" type="image/png" href="/favicon.png" />
-    <link rel="stylesheet" href="/global.css" />
-    <link rel="stylesheet" href="/build/bundle.css" />
+    <link rel="icon" type="image/png" href="./favicon.png" />
+    <link rel="stylesheet" href="./global.css?v=1" />
+    <link rel="stylesheet" href="./build/bundle.css?v=1" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700;900&display=swap"
       rel="stylesheet"
     />
 
-    <script defer src="/build/bundle.js"></script>
+    <script defer src="./build/bundle.js?v=1"></script>
   </head>
 
   <body></body>
